--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ const_format = "0.2.33"
 # Do NOT enable the postgres feature here, it is conditionally enabled in a feature
 # block in the Cargo.toml file for the processor crate.
 # https://github.com/aptos-labs/aptos-indexer-processors/pull/325
-diesel = { version = "=2.2.0", features = [
+diesel = { version = "^2.2.0", features = [
     "chrono",
     "postgres_backend",
     "numeric",
